# dataclass_to_json

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
src/dataclass_to_json/: __init__.py  __version__.py  convert_class_to_json.py
tests/: test_convert_class_to_json.py
